feat: set process info
